# Quasar

./: .gitignore  .gitmodules  LICENSE  README.md
Quasar/: CMakeLists.txt
Quasar/assets/scenes/: PinkCube.qscene
Quasar/assets/scripts/test/: CMakeLists.txt  TestScript.cpp  TestScript.h
Quasar/assets/shaders/: Texture.glsl
Quasar/include/: Quasar.hpp
Quasar/src/: Quasar.hpp
Quasar/src/Platform/Linux/: LinuxDllLoader.cpp  LinuxDllLoader.hpp  LinuxInput.cpp  LinuxInput.hpp  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.hpp
Quasar/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Quasar/src/Platform/Windows/: WIndowsInput.cpp  WindowsDllLoader.cpp  WindowsDllLoader.hpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.hpp
Quasar/src/Quasar/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  OrthographicCameraController.cpp  Window.hpp
Quasar/src/Quasar/Core/: Application.cpp  Application.hpp  Base.hpp  Core.hpp  EntryPoint.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseButtonCodes.hpp  MouseCodes.hpp  PlatformDetection.hpp  Timer.hpp  Timestep.hpp  Window.cpp  Window.hpp
Quasar/src/Quasar/Debug/: Instrumentor.hpp
Quasar/src/Quasar/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Quasar/src/Quasar/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Quasar/src/Quasar/Math/: Math.cpp  Math.hpp
Quasar/src/Quasar/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
Quasar/src/Quasar/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp
Quasar/src/Quasar/System/: DllLoader.hpp  FileSystem.cpp  FileSystem.hpp
Quasar/src/Quasar/Utils/: PlatformUtils.hpp
QuasarEditor/: CMakeLists.txt
QuasarEditor/assets/shaders/: Texture.glsl
QuasarEditor/src/: EditorLayer.cpp  EditorLayer.hpp  QuasarEditorApp.cpp
QuasarEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: FlatColorShader.glsl  Texture.glsl
sandbox/src/: ExampleLayer.cpp  ExampleLayer.hpp  Sandbox2D.cpp  Sandbox2D.hpp  SandboxApp.cpp
scripts/: Utils.py  check_python.py  misc.py  setup.py  setup_python.py  setup_vulkan.py  utils.py  vulkan.py
